2009-11-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/Scope.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Worked on
	  'Bug 552017 - Saner and new default options for Find in
	  Files -> Directories dialog'.

2009-11-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: Added
	  some error handling code for 'Bug 552014 - Find in files
	  dialog (with Directories option) makes MD unresponsive for a
	  long time'.

2009-11-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Execution/ParameterizedExecutionHandler.cs:
	  Provide a dummy execution mode when executing a
	  parameterized handler directly.

2009-11-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: When activating a
	  pad using a keyboard shortcut, set the focus to it. Fixes
	  bug #544135.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* BuildVariables.cs:
	* MonoDevelop.Ide.addin.xml: Bump MD version.

2009-10-30  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CustomExecutionModeDialog.cs:
	  add existing editor to dictionary instead of creating a new one.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Execution/IExecutionCommandCustomizer.cs:
	* MonoDevelop.Ide.Execution/ParameterizedExecutionHandler.cs:
	* MonoDevelop.Ide.Execution/IExecutionConfigurationEditor.cs:
	  Add some docs.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj: Reference the mono-cairo package.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: New overload for
	  OpenDocument.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs:
	  Show an error message when displaying an unknown project.

2009-10-28  Michael Hutchinson  <mhutchinson@novell.com>
