@@ -1,3 +1,8 @@
+2009-11-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Ide.addin.xml: Move code templates panel under
+	  Text Editor section.
+
 2009-11-03  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.FindInFiles/Scope.cs:
